/*
 * Copyright 2021 - 2023 Matrix Origin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package cache;
option go_package = "github.com/matrixorigin/matrixone/pkg/pb/cache";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message CacheKey {
  string Path = 1;
  int64 Offset = 2;
  int64 Sz = 3;
}

message CacheKeys {
  repeated CacheKey keys = 1 [(gogoproto.nullable) = false];
}

message TargetCacheKey {
  map<string, CacheKeys> TargetKey = 1;
}

enum CmdMethod {
  // RemoteRead is the command that remote read file.
  RemoteRead = 0;
}

message RequestCacheKey {
  int32 Index = 1;
  CacheKey CacheKey = 2;
}

// RemoteReadRequest is the request that try to get cache from this node.
// statement that need to be executed on the specified CN node.
message RemoteReadRequest {
  // RequestCacheKey is the requested cache key.
  repeated RequestCacheKey RequestCacheKey = 1;
}

// ResponseCacheData is the response of remote read.
message ResponseCacheData {
  int32 Index = 1;
  bool Hit = 2;
  bytes Data = 3;
}

// RemoteReadResponse is the response of remote read.
message RemoteReadResponse {
  repeated ResponseCacheData ResponseCacheData = 1;
}

// Request is the request of file-service cache server.
message Request {
  // RequestID is the request ID.
  uint64 RequestID = 1;
  // CmdMethod is the type of command.
  CmdMethod CmdMethod = 2;
  // RemoteReadRequest is the request to remote read.
  RemoteReadRequest RemoteReadRequest = 3;
}

// Response is the response to request.
message Response {
  // RequestID is the request ID.
  uint64 RequestID = 1;
  // CmdMethod is the type of command.
  CmdMethod CmdMethod = 2;
  // Error is used to return moerr. Set
  bytes Error = 3;
  // RemoteReadResponse is the response of remote read.
  RemoteReadResponse RemoteReadResponse = 4;
}
