/*
 * Copyright 2021 - 2023 Matrix Origin
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package gossip;
option go_package = "github.com/matrixorigin/matrixone/pkg/pb/gossip";

import "google/protobuf/any.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "query.proto";
import "statsinfo.proto";

enum Operation {
  Unknown = 0;
  Set = 1;
  Delete = 2;
}

message GossipData {
  oneof Data {
    CacheKeyItem CacheKeyItem = 1;
    StatsInfoKeyItem StatsInfoKeyItem = 2;
  }
}

// CacheKeyItem is the item of cache key for data in file-service.
message CacheKeyItem {
  Operation Operation = 1;
  query.CacheKey CacheKey = 2 [(gogoproto.nullable) = false];
  string TargetAddress = 3;
}

message StatsInfoKeyItem {
  Operation Operation = 1;
  statsinfo.StatsInfoKey StatsInfoKey = 2 [(gogoproto.nullable) = false];
  string TargetAddress = 3;
}

message LocalState {
  query.CacheKeys CacheKeys = 1 [(gogoproto.nullable) = false];
  statsinfo.StatsInfoKeys StatsInfoKeys = 2 [(gogoproto.nullable) = false];
}

message TargetState {
  map<string, LocalState> Data = 1;
}

message CommonItem {
  Operation Operation = 1;
  string TargetAddress = 2;
  oneof Key {
    query.CacheKey CacheKey = 3;
    statsinfo.StatsInfoKey StatsInfoKey = 4;
  }
}